--- a/client/src/components/NewIssueBtn/NewIssueBtn.css
+++ b/client/src/components/NewIssueBtn/NewIssueBtn.css
@@ -1,4 +1,6 @@
 .NewIssueBtn-btn {
   color: black;
   margin-top: 8%;
+  float: right;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
